--- a/assets/style.css
+++ b/assets/style.css
@@ -1,13 +1,92 @@
 .header-inner {
     background-color: #000000;
-    border-color: #5E5E5E;
-    border-style: solid;
-    border-width: 1px;
+    border: 1px solid #5E5E5E;
     text-align: center;
     font-weight: bold;
     font-size: 50vw;
+    margin-bottom: 6px;
 }
 
+.body-background {
+    background-color: #F8F9FA;
+}
+
+body {
+ background-color: #F8F9FA;
+}
+
+.panel-box {
+    padding: 5px;
+    background-color: #E9ECEF;
+    box-shadow: 0 4px 8px 0 #DEE2E6, 0 6px 20px 0 #DEE2E6;
+}
+
+.home-panel-box {
+    margin-left: 10px;
+    margin-right: 10px;
+}
+.setting-panel-box {
+    padding: 5px;
+    background-color: #E9ECEF;
+    box-shadow: 0 4px 8px 0 #DEE2E6, 0 6px 20px 0 #DEE2E6;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.setting-od-panel-box {
+    padding: 3px;
+    background-color: #E9ECEF;
+    box-shadow: 0 4px 8px 0 #DEE2E6, 0 6px 20px 0 #DEE2E6;
+    width: 300px;
+    margin-left: 10px;
+    margin-right: 5px;
+}
+.card-header {
+    padding-left: 15px;
+    text-size: 5px;
+    color: #212529;
+    font-weight: bold;
+}
+
+.label-header {
+    padding-left: 15px;
+    padding-top: 5px;
+    text-size: 5px;
+    color: #212529;
+    font-weight: bold;
+}
+
+.card-text {
+    color: #212529;
+}
+
+.mk-summary {
+    color: #212529;
+    padding-left: 15px;
+    padding-top: 3px;
+}
+
+.div-card {
+    background-color: #E9ECEF;
+    border: 1px solid #DEE2E6;
+    box-shadow: 0 4px 8px 0 #DEE2E6, 0 6px 20px 0 #DEE2E6;
+}
+
+.inspect-desc-panel-out-box {
+    padding: 5px;
+    background-color: #E9ECEF;
+    box-shadow: 0 4px 8px 0 #DEE2E6, 0 6px 20px 0 #DEE2E6;
+    margin-left: 270px;
+    /*margin-right: 15px;*/
+}
+
+.card-bg {
+    background-color: #E9ECEF;
+}
+.col-padding {
+    padding-left: 5px;
+    padding-right: 5px;
+}
 .header-H2 {
     color: #999999;
 }
@@ -40,15 +119,15 @@
 
 /* tabs ------------------------------------ */
 .tab-style-23 {
-    width: 23%;
+    width: 305px;
     border-top: 1px solid #030303;
-    background-color: #FAFAFA;
+    background-color: #DEE2E6;
 }
 
 .tab-style-22 {
-    width: 22%;
+    width: 305px;
     border-top: 1px solid #030303;
-    background-color: #FAFAFA;
+    background-color: #DEE2E6;
 }
 
 .tab-label-style {
@@ -66,4 +145,19 @@
 
 .tab-top-row {
     margin-top: 10px;
+}
+
+
+.accordion-button {
+    text-align: left;
+    display: block;
+    background-color: #F8F9FA;
+    color: #212529;
+}
+
+.accordion-button:not(.collapsed) {
+    text-align: center;
+    text-transform: uppercase;
+    background-color: #E9ECEF;
+    color: #212529;
 }
